# nebu-app-framework-cpp

./: .gitignore  Makefile.am  README.md  configure.ac  libnebu-app-framework.pc.in
doc/: doxygen.cfg.in
include/: Makefile.am
include/nebu-app-framework/: application.h  applicationHooks.h  commandRunner.h  configuration.h  daemon.h  daemonCollection.h  daemonManager.h  init.h  topologyManager.h  topologyWriter.h  vmEventHandler.h  vmManager.h
src/: Makefile.am  application.cpp  applicationHooks.cpp  commandRunner.cpp  configuration.cpp  daemon.cpp  daemonCollection.cpp  main.cpp  topologyManager.cpp  topologyWriter.cpp  vmManager.cpp
test/: Makefile.am  MakefileTestList.am
test/integration/: testCommandRunner.cpp
test/mocks/: mockVMEventHandler.h
test/unit/: testDaemon.cpp  testTopologyManager.cpp  testVMManager.cpp
